--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DATABASE_URL=postgresql://root:Tpo2HJVx66QgmkFUIBdLcLvh@makalu.liara.cloud:31189/postgres
-
+REDIS_URL=redis://:3q7jqFoQ2HcERVQarhP5OZa4@makalu.liara.cloud:31574/0
 LIARA_ENDPOINT=https://storage.c2.liara.space
 LIARA_BUCKET_NAME=drgame
 LIARA_ACCESS_KEY=9aiuiinnaq7qbhg1
