--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,11 @@ botocore==1.37.20
 dj-database-url==2.3.0
 Django==5.2
 django-autoslug==1.9.9
+django-ratelimit==4.1.0
+django-redis==5.4.0
 django-storages==1.14.6
 djangorestframework==3.16.0
+djangorestframework_simplejwt==5.5.0
 drf-spectacular==0.28.0
 inflection==0.5.1
 jmespath==1.0.1
@@ -15,9 +18,11 @@ jsonschema-specifications==2025.4.1
 pillow==11.2.1
 psycopg==3.2.3
 psycopg2-binary==2.9.10
+PyJWT==2.9.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 PyYAML==6.0.2
+redis==6.1.0
 referencing==0.36.2
 rpds-py==0.24.0
 s3transfer==0.11.5
