--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ dj-database-url==2.3.0
 Django==5.2
 django-autoslug==1.9.9
 django-ckeditor==6.7.2
+django-filter==25.1
 django-js-asset==3.1.2
 django-storages==1.14.6
 djangorestframework==3.16.0
