--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ asgiref==3.8.1
 attrs==25.3.0
 boto3==1.37.20
 botocore==1.37.20
+certifi==2025.4.26
+charset-normalizer==3.4.2
 dj-database-url==2.3.0
 Django==5.2
 django-autoslug==1.9.9
@@ -11,6 +13,7 @@ django-storages==1.14.6
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
 drf-spectacular==0.28.0
+idna==3.10
 inflection==0.5.1
 jmespath==1.0.1
 jsonschema==4.23.0
@@ -24,6 +27,7 @@ python-dotenv==1.1.0
 PyYAML==6.0.2
 redis==6.1.0
 referencing==0.36.2
+requests==2.32.3
 rpds-py==0.24.0
 s3transfer==0.11.5
 six==1.17.0
