--- a/requirements.txt
+++ b/requirements.txt
@@ -20,12 +20,14 @@ psycopg==3.2.3
 psycopg2-binary==2.9.10
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
+python-slugify==8.0.4
 PyYAML==6.0.2
 referencing==0.36.2
 rpds-py==0.24.0
 s3transfer==0.11.5
 six==1.17.0
 sqlparse==0.5.3
+text-unidecode==1.3
 typing_extensions==4.13.2
 uritemplate==4.1.1
 urllib3==2.4.0
