--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,12 @@ charset-normalizer==3.4.2
 dj-database-url==2.3.0
 Django==5.2
 django-autoslug==1.9.9
-django-ratelimit==4.1.0
-django-redis==5.4.0
 django-ckeditor==6.7.2
+django-cors-headers==4.7.0
 django-filter==25.1
 django-js-asset==3.1.2
+django-ratelimit==4.1.0
+django-redis==5.4.0
 django-storages==1.14.6
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
