--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,10 @@ botocore==1.38.35
 certifi==2025.4.26
 charset-normalizer==3.4.2
 dj-config-url==0.1.1
+dj-database-url==3.0.0
 Django==5.2.3
 django-autoslug==1.9.9
+django-ckeditor==6.7.2
 django-cors-headers==4.7.0
 django-debug-toolbar==5.2.0
 django-filter==25.1
@@ -23,6 +25,7 @@ jmespath==1.0.1
 jsonschema==4.24.0
 jsonschema-specifications==2025.4.1
 pillow==11.2.1
+psycopg==3.2.3
 psycopg2-binary==2.9.10
 PyJWT==2.9.0
 python-dateutil==2.9.0.post0
